--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Getting started with Backend using Node.js of my FYP Xchange",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "jest --runInBand ./tests"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,11 @@
     "multer": "^1.4.4"
   },
   "devDependencies": {
+    "jest": "^27.4.7",
+    "mongodb-memory-server": "^8.2.0",
     "nodemon": "^2.0.15"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
