--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "jest": "^27.4.7",
