--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "admin-bro": "^4.0.1",
-    "admin-bro-expressjs": "^2.1.1",
+    "@adminjs/express": "^4.0.2",
+    "@adminjs/mongoose": "^2.0.1",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
+    "express-formidable": "^1.2.0",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
