--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.3",
     "express-formidable": "^1.2.0",
     "handlebars": "^4.7.7",
